	Updated documentation on all classes in the eval directory, and
		heavily revised the README
	Renamed SlaveData to SlaveConnection
	Change the default for exchange's compression to false
	Bug in IslandModel: it was writing genotypes but reading indivdiuals.
		Set to read and write individuals.  May revisit this later to
		only read and write genotypes, though that'd require some
		undesireable retooling of ECJ's Individual methods.
	Bug in IslandModel: when an ideal individual was found, we were
		joining on the mailbox thread BEFORE sending the "found it"
		signal.  Furthermore, the thread was never interrupted so it'd
		keep on going until the end of a run  -- as a result the signal
		would never get sent. 
	Added verify(...) methods to GPIndividual, GPTree, and GPIndividual to
		make tracking down bugs in the breeders easier.
	Bug in GP: wasn't setting a tree's owner when it was being cloned in
		any of the breeders.  This ordinarily wouldn't have much of an
		effect on anything, but it needed to be fixed.
	Bug in MutateSwapPipeline: the argposition of the swappted subtrees was
		not being swapped as well. Thanks to Andrea Arcuri
		<A.Arcuri@cs.bham.ac.uk>
	Added some efficiency to the new eval package by breaking the read/write
		slave connection threads into separate read and write threads.
	Both SimpleStatistics and KozaStatistics now print out, to the screen, 
		the best-of-generation fitness per-generation and the best-of-run
		fitness at the end.
	Performed some refactoring on SPEA2Evalutor and SPEA2Breeder to make them
		subclasses of SimpleEvaluator and SimpleBreeder, as they were
		sharing a lot of code in common.  Hope we did it right.  Also
		made small changes to SimpleEvaluator and SimpleBreeder to
		accommodate this.

18	P-P-P-Prerelease
	DEBreeder needs to have at least 4 individuals in a subpopulation in order
		to work properly.  We weren't verifying this condition.  Thanks to
		Michael Hart <mhart@baselinesolutions.com.au>