@@ -1319,7 +1319,7 @@ Version		Change Log
 	Bug in GP: wasn't setting a tree's owner when it was being cloned in
 		any of the breeders.  This ordinarily wouldn't have much of an
 		effect on anything, but it needed to be fixed.
-	Bug in MutateSwapPipeline: the argposition of the swappted subtrees was
+	Bug in MutateSwapPipeline: the argposition of the swapped subtrees was
 		not being swapped as well. Thanks to Andrea Arcuri
 		<A.Arcuri@cs.bham.ac.uk>
 	Added some efficiency to the new eval package by breaking the read/write
@@ -1337,3 +1337,10 @@ Version		Change Log
 	DEBreeder needs to have at least 4 individuals in a subpopulation in order
 		to work properly.  We weren't verifying this condition.  Thanks to
 		Michael Hart <mhart@baselinesolutions.com.au>
+	Updated GPNode.clone() to be exactly the same as GPNode.cloneReplacing(),
+		except that it returns object.  They're both deep-clone methods.
+		We retain GPNode.cloneReplacing for historical compatability (and
+		because it's convenient to not have to cast from Object).  In fact,
+		clone() now just calls cloneReplacing().  We had prepared for this
+		in the previous version by putting up a big warning sign on clone()
+		to ward people off of using it as a light clone, as it used to be.
